--- a/knowledgebase/computational_linguistics.html
+++ b/knowledgebase/computational_linguistics.html
@@ -33,7 +33,7 @@
 
             .site-cl-main {
                 width: inherit;
-                min-height: 95%;
+                min-height: 100%;
                 max-height: auto;
                 background-color: rgb(233, 230, 245);
                 padding: 0 20px 40px 20px;
@@ -115,6 +115,7 @@
                 display: none;
                 background-color: rgba(255, 255, 255, 0);
                 border-color: rgba(255, 255, 255, 0);
+                color:black;
                 border: none;
                 box-shadow: none;
                 height: 30px;
@@ -396,21 +397,20 @@
                             <div id="primaryMenu">
                                 <div class="menubox" onclick="openContent('content-main-intro', this); toggleActive(this);">Main Page</div>
                                 <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu1', this); toggleActive(this);">History and Challenges</div>
-                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu1', this); toggleActive(this);">Linguistics Basics</div>
-                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu1', this); toggleActive(this);">Text Preprocessing</div>
-                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu1', this); toggleActive(this);">Word Senses</div>
-                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu1', this); toggleActive(this);">Syntax, Grammar, Parsing</div>
-                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu1', this); toggleActive(this);">Statistical Foundations</div>
-                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu1', this); toggleActive(this);">Vector Semantics</div>
-                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu1', this); toggleActive(this);">Evaluation Methods</div>
-                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu1', this); toggleActive(this);">Machine Learning</div>
-                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu1', this); toggleActive(this);">Unsupervised Learning</div>
-                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu1', this); toggleActive(this);">Semi-Supervised Learning</div>
-                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu1', this); toggleActive(this);">Deep Learning</div>
-                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu1', this); toggleActive(this);">Ethics in NLP</div>
-                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu1', this); toggleActive(this);">Interpretability</div>
-                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu1', this); toggleActive(this);">Future Directions</div>
-                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu1', this); toggleActive(this);">Tools & Libraries</div>
+                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu2', this); toggleActive(this);">Linguistics Basics</div>
+                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu3', this); toggleActive(this);">Text Preprocessing</div>
+                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu4', this); toggleActive(this);">Word Senses</div>
+                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu5', this); toggleActive(this);">Syntax, Grammar, Parsing</div>
+                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu6', this); toggleActive(this);">Statistical Foundations</div>
+                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu7', this); toggleActive(this);">Vector Semantics</div>
+                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu8', this); toggleActive(this);">Evaluation Methods</div>
+                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu9', this); toggleActive(this);">Statistical Machine Learning</div>
+                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu10', this); toggleActive(this);">Model Types and Taxonomy</div>
+                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu12', this); toggleActive(this);">Deep Learning</div>
+                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu13', this); toggleActive(this);">Interpretability & Ethics</div>
+                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu14', this); toggleActive(this);"></div>
+                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu15', this); toggleActive(this);">Future Directions</div>
+                                <div class="menubox" data-contentid="content-constituency-grammar-intro" onclick="openSubMenu('submenu16', this); toggleActive(this);">Tools & Libraries</div>
                             </div>                 
                         </div>
                         <div id="submenu1" class="submenu">
