added content for cl page

--- a/knowledgebase/cl/foundations.html
+++ b/knowledgebase/cl/foundations.html
@@ -1,5 +1,5 @@
 <div id="content-introduction" class="content-item" style="display: block;">
-    <div id="accordion">
+    <div id="accordion-introduction">
         <div class="card">
             <div class="card-header" id="headingOne">
                 <h5 class="mb-0">
@@ -9,9 +9,18 @@
                 </h5>
             </div>
 
-            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion-introduction">
                 <div class="card-body">
-                    Current Applications' image
+                    <span class="bolded">Personal Perspective</span>:  <br>
+                    Personal Assistants, Grammar checking, Speech-to-Text Transcription, Translation <br><br>
+
+                      
+                    <span class="bolded">Industry Perspective</span>: <br>
+                    - <span class="bolded">General</span><br> Search Systems, Chatbot, Text Insight Extractors, Content Generators <br>
+                    - <span class="bolded">Healthcare</span><br> Clinical Documentation, Disease Prediction Using Patients' Notes, Medical Information Extraction <br>
+                    - <span class="bolded">Education</span><br> Automatic Grading Systems, Plagiarism Detection, Personalized Learning Assistance <br>
+                    - <span class="bolded">Finance</span><br> Sentiment Analysis to Predict Stock Movements, Brand Analysis, Customer Service Chatbots, Document Automation <br>
+                    - <span class="bolded">Retail</span><br> Personalized Product Recommendations, Customer Sentiment Analysis, Chatbots for Improved Customer Interaction
                 </div>
             </div>
         </div>
@@ -23,7 +32,7 @@
                     </button>
                 </h5>
             </div>
-            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion-introduction">
                 <div class="card-body">
                     NLP's History
                 </div>
@@ -37,7 +46,7 @@
                     </button>
                 </h5>
             </div>
-            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion-introduction">
                 <div class="card-body">
                     list of Challenges
                 </div>
@@ -47,31 +56,34 @@
 </div>
 
 <div id="content-linguistics" class="content-item" style="display: block;">
-    <div id="accordion">
+    <div id="accordion-linguistics">
         <div class="card">
-            <div class="card-header" id="headingOne">
+            <div class="card-header" id="headingLinguisticsOne">
                 <h5 class="mb-0">
-                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseLinguisticsOne" aria-expanded="true" aria-controls="collapseLinguisticsOne">
                         Curious on What Research Question?
                     </button>
                 </h5>
             </div>
 
-            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+            <div id="collapseLinguisticsOne" class="collapse show" aria-labelledby="headingLinguisticsOne" data-parent="#accordion-linguistics">
                 <div class="card-body">
-                    Rules for a single language, similarities and differences between languages
+                    Linguistics thrives on the fundamental curiosity: "How does language work?".
+                    It delves into the intricacies of human communication, exploring how we construct words and sentences,
+                    convey meaning, and use language in varied social and cultural contexts, 
+                    thus deepening our understanding of human cognition and interaction.
                 </div>
             </div>
         </div>
         <div class="card">
-            <div class="card-header" id="headingTwo">
+            <div class="card-header" id="headingLinguisticsTwo">
                 <h5 class="mb-0">
-                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseLinguisticsTwo" aria-expanded="false" aria-controls="collapseLinguisticsTwo">
                         What shapes a word's structure? (Morphology)
                     </button>
                 </h5>
             </div>
-            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+            <div id="collapseLinguisticsTwo" class="collapse" aria-labelledby="headingLinguisticsTwo" data-parent="#accordion-linguistics">
                 <div class="card-body">
                     Morphology focuses on the internal structure of words. A single word can be composed of many meaningful units called morphemes, 
                     including roots, prefixes, and suffixes. By examining how these morphemes combine, 
@@ -81,14 +93,14 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-header" id="headingThree">
+            <div class="card-header" id="headingLinguisticsThree">
                 <h5 class="mb-0">
-                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseLinguisticsThree" aria-expanded="false" aria-controls="collapseLinguisticsThree">
                         What rules guide sentence formation? (Syntax)
                     </button>
                 </h5>
             </div>
-            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+            <div id="collapseLinguisticsThree" class="collapse" aria-labelledby="headingLinguisticsThree" data-parent="#accordion-linguistics">
                 <div class="card-body">
                     Syntax focuses on the rules and structure that govern the formation and arrangement of sentences in a particular language. It investigates the patterns and systems that allow us to combine words into grammatically correct sentences. This can include how different types of words (nouns, verbs, adjectives, etc.) interact, how they can be arranged, and the relationships between different elements within a sentence. These insights are crucial for many language-related fields, including language teaching and learning, translation, and artificial intelligence.
                 </div>
@@ -102,7 +114,7 @@
                     </button>
                 </h5>
             </div>
-            <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
+            <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion-linguistics">
                 <div class="card-body">
                     Semantics is all about meaning in language. It studies how words, phrases, and sentences relate to the things they denote, or their referents. The field considers questions like why the word "dog" refers to a specific animal, how sentences express complex relationships between entities, or how the meaning of a phrase can be more than the sum of its parts. Semantics provides a bridge between the linguistic forms and the concepts they represent in the human mind.
                 </div>
@@ -116,7 +128,7 @@
                     </button>
                 </h5>
             </div>
-            <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
+            <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion-linguistics">
                 <div class="card-body">
                     Pragmatics explores the ways in which context influences language use and interpretation. It considers both the physical context (like where and when the conversation is happening) and the social context (like the relationship between speakers). The field investigates why we might choose one word over another in a particular situation, how we use language to achieve social goals, and how we interpret ambiguous statements. Pragmatics underlines the fact that language is not used in a vacuum but is deeply embedded in social interactions.
                 </div>
@@ -130,7 +142,7 @@
                     </button>
                 </h5>
             </div>
-            <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
+            <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion-linguistics">
                 <div class="card-body">
                     Phonetics deals with the actual sounds of human speech, which are created physically using the vocal tract, including the tongue, throat, lips, and lungs. It encompasses three sub-disciplines: articulatory phonetics (how the vocal tract produces sounds), auditory phonetics (how we perceive these sounds), and acoustic phonetics (the physical properties of sounds). Through studying these aspects, phonetics helps us understand the wide variety of sounds humans can produce and how these sounds differentiate languages and dialects.
                 </div>
