--- a/knowledgebase/cl/foundations.html
+++ b/knowledgebase/cl/foundations.html
@@ -12,7 +12,7 @@
             <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion-introduction">
                 <div class="card-body">
                     <span class="bolded">Personal Perspective</span>:  <br>
-                    Personal Assistants, Grammar checking, Speech-to-Text Transcription, Translation <br><br>
+                    Personal Assistants, Grammar Checking, Speech-to-Text Transcription, Translation <br><br>
 
                       
                     <span class="bolded">Industry Perspective</span>: <br>
@@ -107,42 +107,42 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-header" id="headingFour">
+            <div class="card-header" id="headingLinguisticsFour">
                 <h5 class="mb-0">
-                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseLinguisticsFour" aria-expanded="false" aria-controls="collapseLinguisticsFour">
                         What's the relationship between words and meaning? (Semantics)
                     </button>
                 </h5>
             </div>
-            <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion-linguistics">
+            <div id="collapseLinguisticsFour" class="collapse" aria-labelledby="headingLinguisticsFour" data-parent="#accordion-linguistics">
                 <div class="card-body">
                     Semantics is all about meaning in language. It studies how words, phrases, and sentences relate to the things they denote, or their referents. The field considers questions like why the word "dog" refers to a specific animal, how sentences express complex relationships between entities, or how the meaning of a phrase can be more than the sum of its parts. Semantics provides a bridge between the linguistic forms and the concepts they represent in the human mind.
                 </div>
             </div>
         </div>
         <div class="card">
-            <div class="card-header" id="headingFive">
+            <div class="card-header" id="headingLinguisticsFive">
                 <h5 class="mb-0">
-                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseLinguisticsFive" aria-expanded="false" aria-controls="collapseLinguisticsFive">
                         How is language used in context? (Pragmatics)
                     </button>
                 </h5>
             </div>
-            <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion-linguistics">
+            <div id="collapseLinguisticsFive" class="collapse" aria-labelledby="headingLinguisticsFive" data-parent="#accordion-linguistics">
                 <div class="card-body">
                     Pragmatics explores the ways in which context influences language use and interpretation. It considers both the physical context (like where and when the conversation is happening) and the social context (like the relationship between speakers). The field investigates why we might choose one word over another in a particular situation, how we use language to achieve social goals, and how we interpret ambiguous statements. Pragmatics underlines the fact that language is not used in a vacuum but is deeply embedded in social interactions.
                 </div>
             </div>
         </div>
         <div class="card">
-            <div class="card-header" id="headingSix">
+            <div class="card-header" id="headingLinguisticsSix">
                 <h5 class="mb-0">
-                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseLinguisticsSix" aria-expanded="false" aria-controls="collapseLinguisticsSix">
                         How do humans physically produce speech? (Phonetics)
                     </button>
                 </h5>
             </div>
-            <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion-linguistics">
+            <div id="collapseLinguisticsSix" class="collapse" aria-labelledby="headingLinguisticsSix" data-parent="#accordion-linguistics">
                 <div class="card-body">
                     Phonetics deals with the actual sounds of human speech, which are created physically using the vocal tract, including the tongue, throat, lips, and lungs. It encompasses three sub-disciplines: articulatory phonetics (how the vocal tract produces sounds), auditory phonetics (how we perceive these sounds), and acoustic phonetics (the physical properties of sounds). Through studying these aspects, phonetics helps us understand the wide variety of sounds humans can produce and how these sounds differentiate languages and dialects.
                 </div>
