update NLP's history

--- a/knowledgebase/cl/foundations.html
+++ b/knowledgebase/cl/foundations.html
@@ -33,8 +33,18 @@
                 </h5>
             </div>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion-introduction">
-                <div class="card-body">
-                    NLP's History
+                <div class="card-body">               
+                    <span class="bolded">Birth of NLP & Rule-Based Approaches</span><br>
+                    Natural Language Processing (NLP) as a discipline can be traced back to the mid-20th century, with the advent of electronic computing. The 1950s saw the first attempts at machine translation and information retrieval, setting the stage for computational linguistics. Early NLP systems in the 1960s and 70s, such as ELIZA and SHRDLU, relied heavily on explicit rule-based approaches, manually programmed by experts. These systems demonstrated that machines could interact with humans in a natural language, albeit in limited domains. However, these rule-based methods lacked scalability and struggled with the inherent complexity and ambiguity of human language.
+                    <br><br>
+                    <span class="bolded">Chomsky's Impact on NLP</span>
+                    Noam Chomsky's work in the 1950s significantly influenced NLP. He introduced transformational grammar, highlighting the complex, rule-governed nature of human language, and proposed that language ability is innate to humans. Although Chomsky was critical of statistical methods in language processing, his theories formed the basis for early syntax-based NLP systems, focusing on the structure and grammatical rules of language.
+                    <br><br>
+                    <span class="bolded">Statistical, Machine Learning and Deep Learning in NLP</span>
+                    The late 1980s and 1990s marked a shift towards statistical methods and machine learning in NLP. Researchers began to leverage data and probabilities to inform language models, moving away from handcrafted rules. This statistical turn led to significant advancements in NLP tasks like speech recognition, part-of-speech tagging, and machine translation. The 21st century saw a further shift with the introduction of neural networks and deep learning. These techniques allowed for the processing of language in an end-to-end fashion, capturing complex patterns and making significant strides in performance. The recent development of transformer models, like BERT and GPT, marked a revolution in NLP, enabling breakthroughs in a range of NLP tasks with their powerful attention mechanisms.
+                    <br><br>
+                    <span class="bolded">Current State & Future Directions of NLP</span>
+                    Today's NLP research is focused on enhancing the understanding capabilities of models, ensuring fairness and interpretability, and expanding their application to low-resource languages. The use of transfer learning and large-scale pretraining has become commonplace, allowing models to generalize better across different tasks. Looking forward, advancements in NLP are likely to continue at an accelerated pace, with a focus on multilingual and cross-modal understanding, improved efficiency, and the ethical implications of language technology. These areas represent some of the most exciting future directions for NLP.
                 </div>
             </div>
         </div>
