update NLP's history

--- a/index.html
+++ b/index.html
@@ -49,20 +49,20 @@
                             <br><br>
                             I hold an M.Sc. in Computational Linguistics from the University of Stuttgart, Germany, 
                             where I was mentored by 
-                            <a href="https://nlpado.de/~sebastian/">Prof. Sebastian Padó</a>
+                            <a href="https://nlpado.de/~sebastian/" target="_blank">Prof. Sebastian Padó</a>
                             at the 
-                            <a href="https://www.ims.uni-stuttgart.de/en/">Institute of Natural Language Processing (IMS)</a>. 
+                            <a href="https://www.ims.uni-stuttgart.de/en/" target="_blank">Institute of Natural Language Processing (IMS)</a>. 
                             My master's thesis focused on optimizing fine-grain entity type classification using contrastive learning.
                             <br>
                             Previously, I earned an M.A. in Chinese Linguistics under the guidance of 
-                            <a href="https://www.semanticscholar.org/author/Daming-Xu/49718650">Prof. Daming Xu</a>
+                            <a href="https://www.semanticscholar.org/author/Daming-Xu/49718650" target="_blank">Prof. Daming Xu</a>
                             at the 
-                            <a href="https://fah.um.edu.mo/department-of-chinese-language-and-literature/programmes/">Faculty of Arts and Humanities</a>
+                            <a href="https://fah.um.edu.mo/department-of-chinese-language-and-literature/programmes/" target="_blank">Faculty of Arts and Humanities</a>
                             of the University of Macau in Macau China, 
                             with a thesis focusing on sociolinguistics. 
                             <br>
                             My academic pursuit began with a B.A. in Chinese Language and Literature from 
-                            <a href="https://www.wyu.edu.cn/">Wuyi University</a>, 
+                            <a href="https://www.wyu.edu.cn/" target="_blank">Wuyi University</a>, 
                             China. 
                             <br><br>
                             Each educational venture has honed my skills and fostered a deep appreciation for 
@@ -73,7 +73,7 @@
                             /tam/ /dziː/ /jɐn/ in Cantonese.
                         </p>
                         <p>
-                            <a href="https://www.visualcv.com/zhiyin_cv/" style="text-decoration: underline;">CV (PDF)</a>
+                            <a href="https://www.visualcv.com/zhiyin_cv/" style="text-decoration: underline;" target="_blank">CV (PDF)</a>
                         </p>
                         <p>
                             <a href="./index.html" style="text-decoration: underline;">English</a>
