--- a/tool/footer.html
+++ b/tool/footer.html
@@ -21,7 +21,7 @@
             -->
 
             <li class="contact-linkedin">
-                <a class="linkedin" href="https://www.linkedin.com/in/zhiyin-tan/" title="Linkedin">
+                <a class="linkedin" href="https://www.linkedin.com/in/zhiyin-tan/" title="Linkedin" target="_blank">
                 <img class="contact-icon" src="../pic/linkedin.ico" alt="linkedin link">
                 <p class="text-linkedin"> Linkedin </p>
                 </a>
