--- a/zho/index_cmn.html
+++ b/zho/index_cmn.html
@@ -45,26 +45,26 @@
                     text-align: left; line-height: 1.5em; max-width: 50em;">  
                         <p> 
                             2023年春，我毕业于德国斯图加特大学，计算机学院的
-                            <a href="https://www.ims.uni-stuttgart.de/en/">自然语言处理研究所</a>，
+                            <a href="https://www.ims.uni-stuttgart.de/en/" target="_blank">自然语言处理研究所</a>，
                             取得计算语言学理学硕士学位，论文导师为
-                            <a href="https://nlpado.de/~sebastian/">Sebastian Padó 教授</a>，
+                            <a href="https://nlpado.de/~sebastian/" target="_blank">Sebastian Padó 教授</a>，
                             研究方向为利用对比学习使文本实体实现细粒度分类。
                             <br><br>
                             在此之前，我在位于中国澳门特别行政区的澳门大学
-                            <a href="https://fah.um.edu.mo/department-of-chinese-language-and-literature/programmes/">艺术与人文学院</a>
+                            <a href="https://fah.um.edu.mo/department-of-chinese-language-and-literature/programmes/" target="_blank">艺术与人文学院</a>
                             研读中国语言学，并取得文学硕士学位。期间由
-                            <a href="https://www.semanticscholar.org/author/Daming-Xu/49718650">徐大明教授</a>
+                            <a href="https://www.semanticscholar.org/author/Daming-Xu/49718650" target="_blank">徐大明教授</a>
                             指导完成社会语言学论文，探讨说话人的说话方式与其社会背景的关系。
                             <br><br>
                             而这一切开始于中国广东的
-                            <a href="https://www.wyu.edu.cn/">五邑大学</a>
+                            <a href="https://www.wyu.edu.cn/" target="_blank">五邑大学</a>
                             文学院。我于此完成体系化的汉语言文学修习，并获得文学学士学位。
                         </p>
                         <p>
                             我的母语是新会话，名字发音在普通话为/tán/ /zhǐ/ /yīn/, 粤语为/taam4/ /zi2/ /jan1/。
                         </p>
                         <p>
-                            <a href="https://www.visualcv.com/zhiyin_cv/" style="text-decoration: underline;">CV (PDF)</a>
+                            <a href="https://www.visualcv.com/zhiyin_cv/" style="text-decoration: underline;" target="_blank">CV (PDF)</a>
                         </p>
                         <p>
                             <a href="../index.html" style="text-decoration: underline;">English</a>
