--- a/zho/index_yue.html
+++ b/zho/index_yue.html
@@ -45,26 +45,26 @@
                     text-align: left; line-height: 1.5em; max-width: 50em;">  
                         <p> 
                             2023年春，我畢業于德國斯圖加特大學，計算機學院嘅
-                            <a href="https://www.ims.uni-stuttgart.de/en/">自然語言處理研究所</a>，
+                            <a href="https://www.ims.uni-stuttgart.de/en/" target="_blank">自然語言處理研究所</a>，
                             取得計算語言學理學碩士學位，論文導師為
-                            <a href="https://nlpado.de/~sebastian/">Sebastian Padó 教授</a>，
+                            <a href="https://nlpado.de/~sebastian/" target="_blank">Sebastian Padó 教授</a>，
                             研究方向係利用對比學習嚟實現文本中實體嘅細粒度分類。
                             <br><br>
                             喺再之前，我喺位於中國澳門特別行政區嘅澳門大學
-                            <a href="https://fah.um.edu.mo/department-of-chinese-language-and-literature/programmes/">藝術與人文學院</a>
+                            <a href="https://fah.um.edu.mo/department-of-chinese-language-and-literature/programmes/" target="_blank">藝術與人文學院</a>
                             研讀中國語言學，並取得文學碩士學位。期間由
-                            <a href="https://www.semanticscholar.org/author/Daming-Xu/49718650">徐大明教授</a>
+                            <a href="https://www.semanticscholar.org/author/Daming-Xu/49718650" target="_blank">徐大明教授</a>
                             指導完成社會語言學論文，探討人嘅講話方式同佢嘅社會背景嘅關係。
                             <br><br>
                             而伊始之地，係中國廣東嘅
-                            <a href="https://www.wyu.edu.cn/">五邑大學</a>
+                            <a href="https://www.wyu.edu.cn/" target="_blank">五邑大學</a>
                             文学院。我喺呢度完成漢語言文學嘅學習同研究，獲得文學學士學位。
                         </p>
                         <p>
                             我嘅母語係新會話，我個名嘅普通話發音係/tán/ /zhǐ/ /yīn/, 廣東話發音係/taam4/ /zi2/ /jan1/。系冇英文名嘅。
                         </p>
                         <p>
-                            <a href="https://www.visualcv.com/zhiyin_cv/" style="text-decoration: underline;">CV (PDF)</a>
+                            <a href="https://www.visualcv.com/zhiyin_cv/" style="text-decoration: underline;" target="_blank">CV (PDF)</a>
                         </p>
                         <p>
                             <a href="../index.html" style="text-decoration: underline;">English</a>
