update NLP's history

--- a/knowledgebase/cl/foundations.html
+++ b/knowledgebase/cl/foundations.html
@@ -41,7 +41,7 @@
                         and information retrieval systems. Initial NLP systems, such as 
                         <a href="https://www.masswerk.at/elizabot/" target="_blank">Weizenbaum's ELIZA (1966)</a> 
                         and 
-                        <a href= Winograd's SHRDLU (1972),
+                        <a href="https://hci.stanford.edu/~winograd/shrdlu/" target="_blank">Winograd's SHRDLU (1972)</a>,
                          employed manual rule-based approaches. Despite the domain limitations and scalability challenges, these pioneering systems illustrated that human-machine interaction via natural language was achievable.
                         <br><br>
                         <span class="bolded">Chomsky's Influence & Dependency Grammar's Emergence</span><br>
