--- a/knowledgebase/computational_linguistics.html
+++ b/knowledgebase/computational_linguistics.html
@@ -27,8 +27,8 @@
                 height: 100%;
                 padding: 0px;
                 margin: 0;
-                /*overflow-x: hidden;
-                overflow-y: hidden;*/
+                /*overflow-x: hidden;*/
+                overflow-y: scroll;
             }
 
             .site-cl-main {
