--- a/tool/navigation.html
+++ b/tool/navigation.html
@@ -51,7 +51,7 @@
             
             <ul class="nav-social">
                 <li class="nav-social-github">
-                    <a href="https://github.com/tan-zhiyin" title="Github" target="_blank">
+                    <a href="https://github.com/zhiyintan" title="Github" target="_blank">
                         <img class="icon" src="../pic/github_icon.ico" alt="github link">
                     </a>
                 </li>
