--- a/knowledgebase/cl/foundations.html
+++ b/knowledgebase/cl/foundations.html
@@ -44,12 +44,15 @@
                         <a href="https://hci.stanford.edu/~winograd/shrdlu/" target="_blank">Winograd's SHRDLU (1972)</a>,
                          employed manual rule-based approaches. Despite the domain limitations and scalability challenges, these pioneering systems illustrated that human-machine interaction via natural language was achievable.
                         <br><br>
+
                         <span class="bolded">Chomsky's Influence & Dependency Grammar's Emergence</span><br>
-                        Noam Chomsky's transformational grammar, proposed in "Syntactic Structures" (1957), significantly shaped NLP's early syntax-oriented phase. Despite Chomsky's critique of statistical methods, his insights into the rule-governed nature of language formed the groundwork for syntax-based NLP systems.
-                        <br><br>
-                        <span class="bolded">Statistical, Machine Learning and Deep Learning in NLP</span><br>
                         Noam Chomsky's transformational grammar, proposed in "Syntactic Structures" (1957), shaped NLP's early syntax phase, preparing ground for syntax-based NLP systems. Concurrently, dependency grammar gained recognition, emphasizing word relationships over phrase structure. Lucien Tesnière's significant contributions (1959) were later complemented by statistical methods from Eisner (1996), enhancing tasks like machine translation and sentiment analysis. Both theories underpin the diversity of linguistic theory in NLP.
                         <br><br>
+
+                        <span class="bolded">Statistical, Machine Learning and Deep Learning in NLP</span><br>
+                        In the late 1980s, NLP shifted towards statistical methods, epitomized by Jelinek and Mercer's work on statistical language models at IBM (1980). This change leveraged data and probabilities, veering away from handcrafted rules, improving areas like speech recognition and machine translation. In the 21st century, deep learning techniques, such as Collobert and Weston's convolutional neural networks (2008) and Mikolov et al.'s word embeddings (2013), facilitated end-to-end language processing. Recent transformer models, like Vaswani et al.'s Transformer (2017), Devlin et al.'s BERT (2018), and Radford et al.'s GPT (2018), revolutionized NLP, enabling breakthroughs across tasks with their attention mechanisms.
+                        <br><br>
+                        
                         <span class="bolded">Current State & Future Directions of NLP</span><br>
                         Contemporary NLP research focuses on model understanding, fairness, interpretability, and low-resource languages, guided by large-scale pretraining and transfer learning. Future developments will likely emphasize multilingual and cross-modal understanding, efficiency enhancements, and the ethical dimensions of language technology. These frontiers represent the most exhilarating future directions in NLP.
                     </p>
