update cv address

--- a/zho/index_yue.html
+++ b/zho/index_yue.html
@@ -64,7 +64,7 @@
                             我嘅母語係新會話，我個名嘅普通話發音係/tán/ /zhǐ/ /yīn/, 廣東話發音係/taam4/ /zi2/ /jan1/。系冇英文名嘅。
                         </p>
                         <p>
-                            <a href="https://www.visualcv.com/zhiyin_cv/" style="text-decoration: underline;" target="_blank">CV (PDF)</a>
+                            <a href="https://my.visualcv.com/zhiyin_tan_cv/" style="text-decoration: underline;" target="_blank">CV (PDF)</a>
                         </p>
                         <p>
                             <a href="../index.html" style="text-decoration: underline;">English</a>
