--- a/zho/index_cmn.html
+++ b/zho/index_cmn.html
@@ -64,7 +64,7 @@
                             我的母语是新会话，名字发音在普通话为/tán/ /zhǐ/ /yīn/, 粤语为/taam4/ /zi2/ /jan1/。
                         </p>
                         <p>
-                            <a href="https://www.visualcv.com/zhiyin_cv/" style="text-decoration: underline;" target="_blank">CV (PDF)</a>
+                            <a href="https://my.visualcv.com/zhiyin_tan_cv/" style="text-decoration: underline;" target="_blank">CV (PDF)</a>
                         </p>
                         <p>
                             <a href="../index.html" style="text-decoration: underline;">English</a>
